fx: layout issue on mobile

--- a/src/components/TicketList.module.css
+++ b/src/components/TicketList.module.css
@@ -119,7 +119,6 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	z-index: 1000;
 }
 
 .confirmBox {
